--- a/MultiverseRasengan/Resources/layout/ComposeMail.axml
+++ b/MultiverseRasengan/Resources/layout/ComposeMail.axml
@@ -74,13 +74,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:id="@+id/MailSend" />
+                android:id="@+id/MailSend"
+                android:textColor="#FFFFFF"
+                android:textSize="25dp"
+                android:background="@drawable/LotButton"
+                android:layout_margin="5dp" />
             <Button
                 android:text="Elenco"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:id="@+id/MailList" />
+                android:id="@+id/MailList"
+                android:textColor="#FFFFFF"
+                android:textSize="25dp"
+                android:background="@drawable/LotButton"
+                android:layout_margin="5dp" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
