--- a/MultiverseRasengan/Resources/layout/ReplyMail.axml
+++ b/MultiverseRasengan/Resources/layout/ReplyMail.axml
@@ -77,13 +77,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:id="@+id/MailSend" />
+                android:id="@+id/MailSend"
+                android:textColor="#FFFFFF"
+                android:textSize="25dp"
+                android:background="@drawable/LotButton"
+                android:layout_margin="5dp" />
             <Button
                 android:text="Elimina"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:id="@+id/MailDelete" />
+                android:id="@+id/MailDelete"
+                android:textColor="#FFFFFF"
+                android:textSize="25dp"
+                android:background="@drawable/LotButton"
+                android:layout_margin="5dp" />
         </LinearLayout>
         <LinearLayout
             android:orientation="horizontal"
@@ -91,23 +99,35 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <Button
-                android:text="Precedente"
+                android:text="«"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:id="@+id/MailPrev" />
+                android:id="@+id/MailPrev"
+                android:textColor="#FFFFFF"
+                android:textSize="25dp"
+                android:background="@drawable/LotButton"
+                android:layout_margin="5dp" />
             <Button
                 android:text="Elenco"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:id="@+id/MailList" />
+                android:id="@+id/MailList"
+                android:textColor="#FFFFFF"
+                android:textSize="25dp"
+                android:background="@drawable/LotButton"
+                android:layout_margin="5dp" />
             <Button
-                android:text="Successiva"
+                android:text="»"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:id="@+id/MailNext" />
+                android:id="@+id/MailNext"
+                android:textColor="#FFFFFF"
+                android:textSize="25dp"
+                android:background="@drawable/LotButton"
+                android:layout_margin="5dp" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
